--- a/index.html
+++ b/index.html
@@ -7,4 +7,194 @@
     <title>全身脱毛今だけ初月0円：KIRAMEKI BEAUTY LABO</title>
     <meta name="description" content="通い放題、追加料金なし、安心サポートのKBL全身脱毛が今だけ初月0円">
 
+    <!-- OGP設定 -->
+    <meta property="og:title" content="全身脱毛今だけ初月0円：KIRAMEKI BEAUTY LABO">
+    <meta property="og:description" content="通い放題、追加料金なし、安心サポートのKBL全身脱毛が今だけ初月0円">
+    <meta property="og:url" content="https://example.com">
+    <meta property="og:image" content="">
+    <meta property="og:site_name" content="KIRAMEKI BEAUTY LABO">
+
+    <!-- cssリセット -->
+    <link rel="stylesheet" href="https://unpkg.com/ress@4.0.0/dist/ress.min.css">
+    <!-- Google fontの読み込み -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP&family=Outfit:wght@100..700&display=swap"
+        rel="stylesheet">
+
+    <!-- スタイルシート読み込み -->
+    <link rel="stylesheet" href="/assets/style/main.css">
 </head>
+
+<body>
+    <!-- ヘッダー -->
+    <header class="header">
+        <div class="header__container w-container">
+            <img class="header__logo" src="/assets/image/header_logo.svg" alt="KIRAMEKI BEAUTY LABO">
+            <ul class="header-button-container">
+                <li>
+                    <a href="/contact/" class="header-button-container__button">
+                        お問い合わせ
+                        <img class="header-button-container__button--right-arrow" src="/assets/image/right_arrow.svg"
+                            alt="">
+                    </a>
+                </li>
+                <li>
+                    <a href="/reservation/" class="header-button-container__button">
+                        カウンセリング予約<span class="header-button-container__button--small">(無料)</span>
+                        <img class="header-button-container__button--right-arrow" src="/assets/image/right_arrow.svg"
+                            alt="">
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </header>
+    <!-- メインビジュアル -->
+    <div class="main-visual">
+        <div class="main-visual__container w-container">
+            <div class="main-visual__title">
+                <div class="main-visual__title--left">
+                    <h1>全身脱毛</h1>
+                    <p>（顔・VIO込）</p>
+                </div>
+                <div class="main-visual__title--right">
+                    <div class="main-visual-title-right-badge-group">
+                        <div class="main-visual-title-right-badge-group__left">
+                            <p class="main-visual-title-right-badge-group__left--now">今だけ</p>
+                            <p class="main-visual-title-right-badge-group__left--first">初月</p>
+                        </div>
+                        <div class="main-visual-title-right-badge-group__right">
+                            <p>0<span>円</span></p>
+                        </div>
+                    </div>
+                    <p class="main-visual__title--bottom">2,480<span>円／月</span></p>
+                </div>
+            </div>
+            <ul class=" main-visual__badge">
+                <li>
+                    <p>通い放題</p>
+                </li>
+                <li>
+                    <p>追加料金なし</p>
+                </li>
+                <li>
+                    <p>安心サポート</p>
+                </li>
+            </ul>
+        </div>
+    </div>
+    <!-- キャンペーン -->
+    <div class="campaign">
+        <div class="campaign__container w-container">
+            <p class="campaign__top">今だけ<span>!</span></p>
+            <div class="campaign__middle label-box">
+                <div class="campaign__middle label-box__title">
+                    <p>フェイシャルコース</p>
+                </div>
+                <div class="campaign__middle label-box__content">
+                    <p><span>3</span>回プレゼント！</p>
+                </div>
+            </div>
+            <p class="campaign__bottom">クレンジング/洗顔/フェイスヒーリング/ 整肌</p>
+        </div>
+    </div>
+    <!-- カウンセリング -->
+    <div class="counseling">
+        <div class="counseling__container w-container">
+            <p class="counseling__title">無料体験実施中！</p>
+            <a href="/reservation/" class="counseling__button">
+                <p>カウンセリング予約<span class="counseling__button--br"> はこちら（無料）</span></p>
+                <img class="counseling__button--right-arrow" src="/assets/image/right_arrow.svg" alt="">
+            </a>
+        </div>
+    </div>
+    <!-- トライアル -->
+    <div class="trial">
+        <div class="trial__container w-container">
+            <div class="trial__title">
+                <p>無料体験内容</p>
+            </div>
+            <ul class="trial__content">
+                <li>
+                    <p>〈脱毛体験〉V<span class="trial__content--small">(10分)or</span>両脇<span
+                            class="trial__content--small">(10分)</span></p>
+                </li>
+                <li>
+                    <p>〈美顔体験〉フェイシャルトリートメント<span class="trial__content--small">(40分コース1回)</span></p>
+                </li>
+            </ul>
+        </div>
+    </div>
+
+    <!-- 3つのポイント -->
+    <section class="point">
+        <div class="point__container w-container">
+            <div class="point__title section__title">
+                <div class="point__title--top section__title--top"><img
+                        src="/assets/image/Kirameki_Beauty_Labo_logo.svg" alt="Kirameki Beauty Labo_logo.svg">
+                    <p>が選ばれる</p>
+                </div>
+                <h2 class="point__title--bottom section__title--bottom">
+                    <img src="/assets/image/shape_left.svg" alt="">
+                    <p>3つのポイント</p>
+                    <img src="/assets/image/shape_right.svg" alt="">
+                </h2>
+            </div>
+            <div class="point-item-group">
+                <div class="point-item-group__item label-box">
+                    <div class="label-box__title">
+                        <p>POINT1 ｜ 通い放題</p>
+                    </div>
+                    <div class="label-box__content">
+                        <div class="label-box__content--top">
+                            <p>納得いくまで何度でも、追加料金なく安心して通っていただけます。</p>
+                        </div>
+                        <ul class="label-box__content--bottom">
+                            <li>
+                                <div class="label-box__content--box">
+                                    <img src="/assets/image/header_logo.svg" alt="KBL Kirameki Beauty Labo">
+                                </div>
+                                <p>来店3回で全身1回</p>
+                            </li>
+                            <li>
+                                <div class="label-box__content--box">
+                                    <p>Aサロン</p>
+                                </div>
+                                <p>来店3回で全身1回</p>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- カウンセリング -->
+    <div class="counseling">
+        <div class="counseling__container w-container">
+            <p class="counseling__title">無料体験実施中！</p>
+            <a href="/reservation/" class="counseling__button">
+                <p>カウンセリング予約<span class="counseling__button--br"> はこちら（無料）</span></p>
+                <img class="counseling__button--right-arrow" src="/assets/image/right_arrow.svg" alt="">
+            </a>
+        </div>
+    </div>
+    <!-- コース -->
+    <section class="course">
+
+    </section>
+    <!-- お客様の声 -->
+    <section class="voices"></section>
+    <!-- カウンセリング -->
+    <div class="counseling">
+        <div class="counseling__container w-container">
+            <p class="counseling__title">無料体験実施中！</p>
+            <a href="/reservation/" class="counseling__button">
+                <p>カウンセリング予約<span class="counseling__button--br"> はこちら（無料）</span></p>
+                <img class="counseling__button--right-arrow" src="/assets/image/right_arrow.svg" alt="">
+            </a>
+        </div>
+    </div>
+
+</body>
+
+</html>
